# mathrix-website-2026

./: .gitignore  README.md
backend/: Dockerfile  README.md  agent.py  check_availability.py  cleanup.py  cors.json  debug_db.py  debug_output.txt  export_4th_year.py  find_user.py  generate_all_receipts.py  generate_specific_receipts.py  main.py  mathrix_3rd_and_4th_year_registrations.csv  mathrix_4th_year_registrations.csv  push_docker.ps1  pyproject.toml  render.yaml  requirements.txt  stress_test.py  test_limit.py  test_receipt.py
backend/configs/: config.py
backend/data/: context.txt
backend/handler/: handler.py
backend/prompts/: augmented_prompt.md  classify_prompt.md  llm_answering_prompt.md  llm_fd_interest_rate_tool_prompt.md  llm_header_prompt.md  loader.py  prompt.py
backend/receipt/: generator.py
backend/router/: agents.py
backend/schemas/: chat.py
backend/tools/: kb_tool.py
backend/utils/: Utils.py  db_service.py  email_service.py  pdf_service.py  s3_service.py
docs/Code_Mathrix/: README.md
docs/Find_The_Fixed_Points/: Round1_MCQs.md  Round2_Tasks.md  organizer_contacts.md  schedule_and_logistics.md
docs/GoofyChess/: README.md
docs/IPL_Auction/: README.md
docs/MagicMatix/: Round1_MCQs.md  Round2_Tasks.md  organizer_contacts.md  schedule.md
docs/Math_Quiz/: README.md
docs/Mathkinator/: README.md
docs/Paper_Presentation/: README.md
docs/Query_Quest/: Round1_MCQs.md  Round2_Tasks.md  attendance_sheet.csv  dataset.sql  organizer_contacts.md  (+1 more)
frontend/: build_log.txt  index.html  package-lock.json  package.json  vercel.json
(+22 files in other folders)
